MB-60625: Return size_t after accumulating to prevent underflow

Previously, the size of an arena is accunmulated into a 32 bit integer.
This meant that an underflow would occur after 4GB of memory had been
used. Instead, we correctly accumulate into a 64 bit integer and prevent
an underflow from occuring.

Change-Id: Ia5a2e0b388a69ad7e63474aeb1f4307e35c04282
Reviewed-on: https://review.couchbase.org/c/platform/+/204864
Well-Formed: Restriction Checker
Reviewed-by: Jim Walker <jim@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>